spec/grammar.ebnf
(* this document is only informative
 * the parser is not generated from this
 * document and may change independantly from it
 *)

program = top_level_statement* ;

top_level_statement = struct_decl
                    | var_decl
                    | function_decl
                    ;

struct_name = IDENTIFIER ;
variable_name = IDENTIFIER ;
function_name = INDENTIFIER ;
label = IDENTIFIER ;

type = primitive_type | struct_name | pointer ;

primitive_type = "u8" | "i32" | "u32" | "ptr" ;

base_type = primitive_type | struct_name ;
pointer = base_type "*"+ ;

(* yes mandated trailing comma even on last field *)
struct_field = variable_name ":" type "," ;
struct_decl = "struct" struct_name "{" struct_field+ "}" ;

register_sized = primitive_type | pointer ;
fn_arg = variable_name ":" register_sized ;
fn_args = (* empty *)
        | fn_arg ("," fn_arg)*
        ;

fn_decl = "fn" function_name ("->" type)? "{" statement* "}" ;

(* always an initalizer, with keywords `zeroed` and `undefined` *)
var_initializer = expression | "zeroed" | "undefined" ;
var_decl = ("var" | "const") variable_name ":" type "=" var_initializer ";" ;

statement = var_decl
          | expression ";"
          | "return" expression? ";"
          | "if" "(" expression ")" statement ("else" statement)?
          | "while" "(" expression ")" statement
          | "{" statement* "}"
          | "goto" label ";"
          | label ":" statement
          ;

lvalue = (* hmmmmmm *)

literal = NUMBER | IDENTIFIER | (* others *)
atom = literal | (* others *)

bin_op = "+" | "-"
bin_op_expr = expression bin_op expression

(* pratt parsed, precedence TBD *)
expression = atom
           | bin_op_expr
           | unary_op_expr
           ;
