aux/rs_old/src/parser.rs
use std::fmt;
use std::rc::Rc;

use crate::lexer::{LexError, Lexer, Token, TokenType};

pub struct Parser {
    source: Rc<[u8]>,
    lexer: Lexer,
    current: Token,
}

#[derive(Debug, Clone, PartialEq)]
pub enum ParseError {
    // those should probably carry source code location information
    LexError(LexError),
    UnexpectedToken { expected: String, found: TokenType },
    UnexpectedEof,
    EmptyStruct { name: Rc<[u8]> },
    MissingSemicolon, // probably common enough to warrant a variant
    Unimplemented { reason: &'static str }, // temporary
}

impl From<LexError> for ParseError {
    fn from(err: LexError) -> Self {
        ParseError::LexError(err)
    }
}

#[derive(Debug, Clone, PartialEq)]
pub struct TypeName {
    rc: Rc<[u8]>,
}

impl TypeName {
    pub fn new(name: Rc<[u8]>) -> Self {
        Self { rc: name }
    }

    pub fn as_bytes(&self) -> &[u8] {
        &self.rc
    }

    pub fn as_str(&self) -> &str {
        std::str::from_utf8(&self.rc).unwrap_or("")
    }
}

#[derive(Debug, Clone, PartialEq)]
pub struct LabelName {
    rc: Rc<[u8]>,
}

impl LabelName {
    pub fn new(name: Rc<[u8]>) -> Self {
        Self { rc: name }
    }

    pub fn as_bytes(&self) -> &[u8] {
        &self.rc
    }

    pub fn as_str(&self) -> &str {
        std::str::from_utf8(&self.rc).unwrap_or("")
    }
}

#[derive(Debug, Clone, PartialEq)]
pub struct VariableName {
    rc: Rc<[u8]>,
}

impl VariableName {
    pub fn new(name: Rc<[u8]>) -> Self {
        Self { rc: name }
    }

    pub fn as_bytes(&self) -> &[u8] {
        &self.rc
    }

    pub fn as_str(&self) -> &str {
        std::str::from_utf8(&self.rc).unwrap_or("")
    }
}

#[derive(Debug, Clone, PartialEq)]
pub enum Type {
    PrimitiveType(PrimitiveType),
    Struct(TypeName),
    Pointer(Pointer),
}

#[derive(Debug, Clone, PartialEq)]
pub struct Pointer {
    base: Rc<Type>,
    indirection: usize,
}

impl Pointer {
    fn new(base: &Type, indirection: usize) -> Self {
        if let Type::Pointer(Pointer {
            base: actual_base,
            indirection: base_indirection,
        }) = base
        {
            Self {
                base: actual_base.clone(),
                indirection: base_indirection + indirection,
            }
        } else {
            Self {
                base: Rc::new(base.clone()),
                indirection,
            }
        }
    }
}

#[derive(Debug, Clone, PartialEq)]
pub enum PrimitiveType {
    U8,
    I32,
    U32,
    Ptr,
}

#[derive(Debug, Clone, PartialEq)]
pub enum RegisterSizedType {
    PrimitiveType(PrimitiveType),
    Pointer(Pointer),
}

#[derive(Debug, Clone, PartialEq)]
pub struct Field {
    ty: Type,
    name: VariableName,
}

#[derive(Debug, Clone, PartialEq)]
pub struct Struct {
    name: TypeName,
    fields: Box<[Field]>,
}

#[derive(Debug, Clone, PartialEq)]
enum VariableInitializer {
    Initializer(Expr),
    Undefined,
    Zeroed,
}

#[derive(Debug, Clone, PartialEq)]
pub struct VarDecl {
    is_const: bool,
    ty: Type,
    name: VariableName,
    initializer: VariableInitializer,
}

#[derive(Debug, Clone, PartialEq)]
pub enum TopLevelStatement {
    GlobalDecl(VarDecl),
    StructDecl(Box<Struct>),
    // TODO: functions
}

#[derive(Debug, Clone, PartialEq)]
pub struct Program {
    statements: Box<[TopLevelStatement]>,
}

impl Parser {
    pub fn new(source: Rc<[u8]>) -> Result<Self, ParseError> {
        let mut lexer = Lexer::new(Rc::clone(&source));
        let first_token = lexer.next_token()?;

        Ok(Self {
            source: source.clone(),
            lexer,
            current: first_token,
        })
    }

    pub fn parse(&mut self) -> Result<Program, ParseError> {
        let mut statements: Vec<TopLevelStatement> = Vec::new();

        while self.peek_kind() != &TokenType::Eof {
            let stmt = match self.peek_kind() {
                TokenType::Struct => {
                    TopLevelStatement::StructDecl(self.parse_struct_decl()?.into())
                }
                TokenType::Const | TokenType::Var => {
                    TopLevelStatement::GlobalDecl(self.parse_var_decl()?)
                }
                TokenType::Fn => panic!("functions not implemented yet"),
                _ => {
                    return Err(ParseError::UnexpectedToken {
                        expected: "top level statement".into(),
                        found: self.peek_kind().clone(),
                    })
                }
            };

            statements.push(stmt);
        }

        Ok(Program {
            statements: statements.into(),
        })
    }

    fn parse_struct_decl(&mut self) -> Result<Struct, ParseError> {
        self.expect(TokenType::Struct)?;

        let name = if let TokenType::Identifier(id) = self.peek_kind() {
            TypeName::new(id.clone())
        } else {
            return Err(ParseError::UnexpectedToken {
                expected: "struct name".into(),
                found: self.peek_kind().clone(),
            });
        };
        self.advance()?;

        self.expect(TokenType::Lbrace)?;

        let mut fields: Vec<Field> = Vec::new();
        while self.current.kind != TokenType::Rbrace {
            let field_name = if let TokenType::Identifier(id) = self.peek_kind() {
                VariableName::new(id.clone())
            } else {
                return Err(ParseError::UnexpectedToken {
                    expected: "field name".into(),
                    found: self.peek_kind().clone(),
                });
            };
            self.advance()?;

            self.expect(TokenType::Colon)?;

            let field_type = self.parse_type()?;

            self.expect(TokenType::Comma)?;

            fields.push(Field {
                ty: field_type,
                name: field_name,
            });
        }

        if fields.is_empty() {
            return Err(ParseError::EmptyStruct {
                name: name.rc.clone(),
            });
        }

        self.expect(TokenType::Rbrace)?;

        Ok(Struct {
            name,
            fields: fields.into(),
        })
    }

    fn parse_var_decl(&mut self) -> Result<VarDecl, ParseError> {
        let is_const = match self.peek_kind() {
            TokenType::Const => true,
            TokenType::Var => false,
            _ => {
                return Err(ParseError::UnexpectedToken {
                    expected: "const or var".into(),
                    found: self.peek_kind().clone(),
                });
            }
        };
        self.advance()?;

        let name = if let TokenType::Identifier(id) = self.peek_kind() {
            VariableName::new(id.clone())
        } else {
            return Err(ParseError::UnexpectedToken {
                expected: "variable name".into(),
                found: self.peek_kind().clone(),
            });
        };
        self.advance()?;

        self.expect(TokenType::Colon)?;

        let ty = self.parse_type()?;

        self.expect(TokenType::Assign)?;

        let initializer = match self.peek_kind() {
            TokenType::Undefined => {
                self.advance()?;
                VariableInitializer::Undefined
            }
            TokenType::Zeroed => {
                self.advance()?;
                VariableInitializer::Zeroed
            }
            _ => {
                let expr = self.parse_expression()?;
                VariableInitializer::Initializer(expr)
            }
        };

        self.expect(TokenType::Semicolon)?;

        Ok(VarDecl {
            is_const,
            name,
            ty,
            initializer,
        })
    }

    fn parse_type(&mut self) -> Result<Type, ParseError> {
        let base_type = match self.peek_kind() {
            TokenType::U8 => Type::PrimitiveType(PrimitiveType::U8),
            TokenType::I32 => Type::PrimitiveType(PrimitiveType::I32),
            TokenType::U32 => Type::PrimitiveType(PrimitiveType::U32),
            TokenType::Ptr => Type::PrimitiveType(PrimitiveType::Ptr),
            TokenType::Identifier(name) => {
                let type_name = TypeName::new(name.clone());
                Type::Struct(type_name)
            }
            _ => {
                return Err(ParseError::UnexpectedToken {
                    expected: "type name".into(),
                    found: self.peek_kind().clone(),
                });
            }
        };
        self.advance()?;

        let mut indirection = 0;
        while self.peek_kind() == &TokenType::Star {
            self.advance()?;
            indirection += 1;
        }

        let ty = if indirection == 0 {
            base_type
        } else {
            let concrete_type = Pointer::new(&base_type, indirection);
            Type::Pointer(concrete_type)
        };

        Ok(ty)
    }

    fn peek_kind(&self) -> &TokenType {
        &self.current.kind
    }

    fn advance(&mut self) -> Result<(), ParseError> {
        if self.peek_kind() != &TokenType::Eof {
            self.current = self.lexer.next_token()?;
        }

        Ok(())
    }

    fn expect(&mut self, expected: TokenType) -> Result<(), ParseError> {
        if self.current.kind == expected {
            self.advance()
        } else if expected == TokenType::Semicolon {
            Err(ParseError::MissingSemicolon)
        } else {
            Err(ParseError::UnexpectedToken {
                expected: format!("{:?}", expected),
                found: self.current.kind.clone(),
            })
        }
    }
}

#[derive(Debug, Clone, PartialEq)]
pub enum Statement {
    ExprStatement(Expr),
    VarDecl(VarDecl),
    Assignment {
        lvalue: Expr,
        value: Expr,
    },
    Return {
        value: Option<Expr>,
    },
    If {
        condition: Expr,
        then_branch: Box<Statement>,
        else_branch: Option<Box<Statement>>,
    },
    While {
        condition: Expr,
        body: Box<Statement>,
    },
    Block {
        statements: Box<[Statement]>,
    },
    Goto {
        label: LabelName,
    },
    Labeled {
        label: LabelName,
        statement: Box<Statement>,
    },
}

impl Parser {
    fn parse_statement(&mut self) -> Result<Statement, ParseError> {
        todo!("statement parsing isn't implemented yet")
    }
}

// higher = tighter binding
// per https://en.cppreference.com/w/c/language/operator_precedence.html
#[derive(Debug, Clone, Copy, PartialEq, Eq, PartialOrd, Ord)]
#[repr(u8)]
enum Precedence {
    None,
    Assignment, // =
    LogicalOr,  // ||
    LogicalAnd, // &&
    BitwiseOr,  // |
    BitwiseXor, // ^
    BitwiseAnd, // &
    Equality,   // == !=
    Comparison, // < > <= >=
    Shift,      // << >>
    Term,       // + -
    Factor,     // * / %
    Prefix,     // ! ~ - &
    Postfix,    // -> . [] ()
}

impl Precedence {
    /// Returns the next precedence level (for left-associative operators)
    fn next(self) -> Self {
        unsafe { std::mem::transmute((self as u8) + 1) }
    }
}

impl From<&BinaryOp> for Precedence {
    fn from(op: &BinaryOp) -> Precedence {
        match op {
            BinaryOp::Or => Precedence::LogicalOr,
            BinaryOp::And => Precedence::LogicalAnd,
            BinaryOp::BitOr => Precedence::BitwiseOr,
            BinaryOp::BitXor => Precedence::BitwiseXor,
            BinaryOp::BitAnd => Precedence::BitwiseAnd,
            BinaryOp::Eq | BinaryOp::Neq => Precedence::Equality,
            BinaryOp::Gt | BinaryOp::Ge | BinaryOp::Lt | BinaryOp::Le => Precedence::Comparison,
            BinaryOp::Lshift | BinaryOp::Rshift => Precedence::Shift,
            BinaryOp::Add | BinaryOp::Sub => Precedence::Term,
            BinaryOp::Mul | BinaryOp::Div | BinaryOp::Mod => Precedence::Factor,
        }
    }
}

#[derive(Debug, Clone, Copy, PartialEq, Eq)]
pub enum BinaryOp {
    // Arithmetic
    Add,
    Sub,
    Mul,
    Div,
    Mod,
    // Bitwise
    BitAnd,
    BitOr,
    BitXor,
    Lshift,
    Rshift,
    // Comparison
    Eq,
    Neq,
    Lt,
    Le,
    Gt,
    Ge,
    // Logical
    And,
    Or,
}

impl TryFrom<&TokenType> for BinaryOp {
    type Error = ();

    fn try_from(token: &TokenType) -> Result<Self, Self::Error> {
        match token {
            // Arithmetic
            TokenType::Plus => Ok(BinaryOp::Add),
            TokenType::Minus => Ok(BinaryOp::Sub),
            TokenType::Star => Ok(BinaryOp::Mul),
            TokenType::Slash => Ok(BinaryOp::Div),
            TokenType::Mod => Ok(BinaryOp::Mod),
            // Bitwise
            TokenType::Ampersand => Ok(BinaryOp::BitAnd),
            TokenType::Pipe => Ok(BinaryOp::BitOr),
            TokenType::Xor => Ok(BinaryOp::BitXor),
            TokenType::Lshift => Ok(BinaryOp::Lshift),
            TokenType::Rshift => Ok(BinaryOp::Rshift),
            // Comparison
            TokenType::Eq => Ok(BinaryOp::Eq),
            TokenType::Neq => Ok(BinaryOp::Neq),
            TokenType::Lt => Ok(BinaryOp::Lt),
            TokenType::Le => Ok(BinaryOp::Le),
            TokenType::Gt => Ok(BinaryOp::Gt),
            TokenType::Ge => Ok(BinaryOp::Ge),
            // Logical
            TokenType::And => Ok(BinaryOp::And),
            TokenType::Or => Ok(BinaryOp::Or),
            _ => Err(()),
        }
    }
}

#[derive(Debug, Clone, Copy, PartialEq, Eq)]
pub enum UnaryOp {
    Negate,     // -
    LogicalNot, // !
    BitwiseNot, // ~
    AddrOf,     // &
    Deref,      // *
}

impl TryFrom<&TokenType> for UnaryOp {
    type Error = ();

    fn try_from(token: &TokenType) -> Result<Self, Self::Error> {
        match token {
            TokenType::Minus => Ok(UnaryOp::Negate),
            TokenType::Not => Ok(UnaryOp::LogicalNot),
            TokenType::Bnot => Ok(UnaryOp::BitwiseNot),
            TokenType::Ampersand => Ok(UnaryOp::AddrOf),
            TokenType::Star => Ok(UnaryOp::Deref),
            _ => Err(()),
        }
    }
}

#[derive(Debug, Clone, PartialEq)]
pub enum Expr {
    Number(i64),
    Identifier(Rc<[u8]>),
    StringLiteral(Rc<[u8]>),
    CharLiteral(u8),
    Syscall(Box<[Expr]>),
    Binary {
        op: BinaryOp,
        left: Box<Expr>,
        right: Box<Expr>,
    },
    Unary {
        op: UnaryOp,
        operand: Box<Expr>,
    },
    Grouping(Box<Expr>),
    // Postfix
    Call {
        callee: Box<Expr>,
        args: Box<[Expr]>,
    },
    FieldAccess {
        object: Box<Expr>,
        field: Rc<[u8]>,
    },
    ArrowAccess {
        object: Box<Expr>,
        field: Rc<[u8]>,
    },
    Index {
        object: Box<Expr>,
        index: Box<Expr>,
    },
}

impl Parser {
    fn parse_expression(&mut self) -> Result<Expr, ParseError> {
        self.parse_expression_bp(Precedence::None)
    }

    fn parse_atom(&mut self) -> Result<Expr, ParseError> {
        use TokenType as T;

        match self.peek_kind() {
            T::Identifier(id) => {
                let id = id.clone();
                self.advance()?;
                Ok(Expr::Identifier(id))
            }
            T::Number(x) => {
                let x = *x;
                self.advance()?;
                Ok(Expr::Number(x))
            }
            T::StringLiteral(s) => {
                let s = s.clone();
                self.advance()?;
                Ok(Expr::StringLiteral(s))
            }
            T::CharLiteral(c) => {
                let c = *c;
                self.advance()?;
                Ok(Expr::CharLiteral(c))
            }
            T::Lparen => {
                self.advance()?;
                let inner = self.parse_expression()?;
                self.expect(T::Rparen)?;
                Ok(Expr::Grouping(Box::new(inner)))
            }
            T::Syscall => {
                self.advance()?;
                self.expect(T::Lparen)?;

                let mut args: Vec<Expr> = Vec::new();
                args.push(self.parse_expression()?);
                while let &T::Comma = self.peek_kind() {
                    self.advance()?;
                    args.push(self.parse_expression()?);
                }

                self.expect(T::Rparen)?;
                Ok(Expr::Syscall(args.into()))
            }
            _ => Err(ParseError::UnexpectedToken {
                expected: "literal, variable or function call".into(),
                found: self.peek_kind().clone(),
            }),
        }
    }

    fn parse_unary_expression(&mut self) -> Result<Expr, ParseError> {
        use TokenType as T;

        // Prefix operators: right-recursive
        if let Ok(op) = UnaryOp::try_from(self.peek_kind()) {
            self.advance()?;
            let operand = Box::new(self.parse_unary_expression()?);
            return Ok(Expr::Unary { op, operand });
        }

        // Atom
        let mut expr = self.parse_atom()?;

        // Postfix operators: left-iterative loop
        // Postfix has higher binding power than any binary operator so we consume
        // greedily here before returning to the Pratt loop.
        loop {
            match self.peek_kind() {
                // Function call: expr(arg, ...)
                T::Lparen => {
                    self.advance()?;
                    let mut args = Vec::new();
                    if !matches!(self.peek_kind(), T::Rparen) {
                        args.push(self.parse_expression()?);
                        while matches!(self.peek_kind(), T::Comma) {
                            self.advance()?;
                            args.push(self.parse_expression()?);
                        }
                    }
                    self.expect(T::Rparen)?;
                    expr = Expr::Call {
                        callee: Box::new(expr),
                        args: args.into(),
                    };
                }
                // Arrow field access: expr->field
                T::Arrow => {
                    self.advance()?;
                    let field = if let T::Identifier(id) = self.peek_kind() {
                        let field = id.clone();
                        self.advance()?;
                        field
                    } else {
                        return Err(ParseError::UnexpectedToken {
                            expected: "field name".into(),
                            found: self.peek_kind().clone(),
                        });
                    };
                    expr = Expr::ArrowAccess {
                        object: Box::new(expr),
                        field,
                    };
                }
                // Dot field access: expr.field
                T::Dot => {
                    self.advance()?;
                    let field = if let T::Identifier(id) = self.peek_kind() {
                        let field = id.clone();
                        self.advance()?;
                        field
                    } else {
                        return Err(ParseError::UnexpectedToken {
                            expected: "field name".into(),
                            found: self.peek_kind().clone(),
                        });
                    };
                    expr = Expr::FieldAccess {
                        object: Box::new(expr),
                        field,
                    };
                }
                // Array index: expr[index]
                T::Lbracket => {
                    self.advance()?;
                    let index = Box::new(self.parse_expression()?);
                    self.expect(T::Rbracket)?;
                    expr = Expr::Index {
                        object: Box::new(expr),
                        index,
                    };
                }
                _ => break,
            }
        }

        Ok(expr)
    }

    fn parse_expression_bp(&mut self, min_prec: Precedence) -> Result<Expr, ParseError> {
        let mut left = self.parse_unary_expression()?;

        while let Ok(op) = BinaryOp::try_from(self.peek_kind()) {
            let precedence = Precedence::from(&op);

            if precedence < min_prec {
                // stop aggregating operations at this precedence level and return to caller
                // there is a binary operation after this but it'll get parsed in an outer call
                // with a lower min_precedence. perhaps the top level call with min_precedence = 0
                return Ok(left);
            }

            // keep binding
            self.advance()?;

            // following canonical Pratt parsing semantics, this assumes left-associativity.
            // assignment is the exception that requires (unimplemented yet) custom logic
            let next_prec = precedence.next();
            let right = self.parse_expression_bp(next_prec)?;
            let right = Box::new(right);

            let new_left = Expr::Binary {
                op,
                left: Box::new(left),
                right,
            };
            left = new_left;

            // continue binding at this precedence level
        }

        Ok(left)
    }
}

impl fmt::Display for BinaryOp {
    fn fmt(&self, f: &mut fmt::Formatter<'_>) -> fmt::Result {
        let s = match self {
            BinaryOp::Add => "+",
            BinaryOp::Sub => "-",
            BinaryOp::Mul => "*",
            BinaryOp::Div => "/",
            BinaryOp::Mod => "%",
            BinaryOp::BitAnd => "&",
            BinaryOp::BitOr => "|",
            BinaryOp::BitXor => "^",
            BinaryOp::Lshift => "<<",
            BinaryOp::Rshift => ">>",
            BinaryOp::Eq => "==",
            BinaryOp::Neq => "!=",
            BinaryOp::Lt => "<",
            BinaryOp::Le => "<=",
            BinaryOp::Gt => ">",
            BinaryOp::Ge => ">=",
            BinaryOp::And => "&&",
            BinaryOp::Or => "||",
        };
        write!(f, "{}", s)
    }
}

impl fmt::Display for UnaryOp {
    fn fmt(&self, f: &mut fmt::Formatter<'_>) -> fmt::Result {
        let s = match self {
            UnaryOp::Negate => "-",
            UnaryOp::LogicalNot => "!",
            UnaryOp::BitwiseNot => "~",
            UnaryOp::AddrOf => "&",
            UnaryOp::Deref => "*",
        };
        write!(f, "{}", s)
    }
}

impl fmt::Display for Expr {
    fn fmt(&self, f: &mut fmt::Formatter<'_>) -> fmt::Result {
        match self {
            Expr::Number(n) => write!(f, "{}", n),
            Expr::Identifier(id) => write!(f, "{}", String::from_utf8_lossy(id)),
            Expr::StringLiteral(s) => {
                write!(f, "\"")?;
                for &byte in s.as_ref() {
                    match byte {
                        b'\n' => write!(f, "\\n")?,
                        b'\t' => write!(f, "\\t")?,
                        b'\r' => write!(f, "\\r")?,
                        b'\\' => write!(f, "\\\\")?,
                        b'"' => write!(f, "\\\"")?,
                        b'\0' => write!(f, "\\0")?,
                        0x20..=0x7E => write!(f, "{}", byte as char)?,
                        _ => write!(f, "\\x{:02X}", byte)?,
                    }
                }
                write!(f, "\"")
            }
            Expr::CharLiteral(ch) => {
                let repr = match ch {
                    b'\n' => "\\n".to_string(),
                    b'\t' => "\\t".to_string(),
                    b'\r' => "\\r".to_string(),
                    b'\\' => "\\\\".to_string(),
                    b'\'' => "\\'".to_string(),
                    b'\0' => "\\0".to_string(),
                    // Printable ASCII
                    0x20..=0x7E => format!("{}", *ch as char),
                    // Non-printable: use hex escape
                    _ => format!("\\x{:02X}", ch),
                };
                write!(f, "'{}'", repr)
            }
            Expr::Binary { op, left, right } => {
                write!(f, "({} {} {})", op, left, right)
            }
            Expr::Unary { op, operand } => {
                write!(f, "({} {})", op, operand)
            }
            Expr::Grouping(expr) => {
                write!(f, "(group {})", expr)
            }
            Expr::Call { callee, args } => {
                write!(f, "(call {}", callee)?;
                for arg in args {
                    write!(f, " {}", arg)?;
                }
                write!(f, ")")
            }
            Expr::Syscall(args) => {
                write!(f, "(syscall")?;
                for arg in args {
                    write!(f, " {}", arg)?;
                }
                write!(f, ")")
            }
            Expr::FieldAccess { object, field } => {
                write!(f, "(. {} {})", object, String::from_utf8_lossy(field))
            }
            Expr::ArrowAccess { object, field } => {
                write!(f, "(-> {} {})", object, String::from_utf8_lossy(field))
            }
            Expr::Index { object, index } => {
                write!(f, "([] {} {})", object, index)
            }
        }
    }
}

impl fmt::Display for TypeName {
    fn fmt(&self, f: &mut fmt::Formatter<'_>) -> fmt::Result {
        write!(f, "{}", self.as_str())
    }
}

impl fmt::Display for VariableName {
    fn fmt(&self, f: &mut fmt::Formatter<'_>) -> fmt::Result {
        write!(f, "{}", self.as_str())
    }
}

impl fmt::Display for PrimitiveType {
    fn fmt(&self, f: &mut fmt::Formatter<'_>) -> fmt::Result {
        match self {
            PrimitiveType::U8 => write!(f, "u8"),
            PrimitiveType::I32 => write!(f, "i32"),
            PrimitiveType::U32 => write!(f, "u32"),
            PrimitiveType::Ptr => write!(f, "ptr"),
        }
    }
}

impl fmt::Display for Type {
    fn fmt(&self, f: &mut fmt::Formatter<'_>) -> fmt::Result {
        match self {
            Type::PrimitiveType(pt) => write!(f, "{}", pt),
            Type::Struct(name) => write!(f, "{}", name),
            Type::Pointer(Pointer { base, indirection }) => {
                write!(f, "{}{}", base, "*".repeat(*indirection))
            }
        }
    }
}

impl fmt::Display for Field {
    fn fmt(&self, f: &mut fmt::Formatter<'_>) -> fmt::Result {
        write!(f, "{}: {}", self.name, self.ty)
    }
}

impl fmt::Display for Struct {
    fn fmt(&self, f: &mut fmt::Formatter<'_>) -> fmt::Result {
        writeln!(f, "struct {} {{", self.name)?;
        for field in self.fields.iter() {
            writeln!(f, "  {},", field)?;
        }
        write!(f, "}}")
    }
}

impl fmt::Display for VarDecl {
    fn fmt(&self, f: &mut fmt::Formatter<'_>) -> fmt::Result {
        let keyword = if self.is_const { "const" } else { "var" };
        let initializer: String = match &self.initializer {
            VariableInitializer::Zeroed => "zeroed".into(),
            VariableInitializer::Undefined => "".into(),
            VariableInitializer::Initializer(expr) => {
                format!("{}", expr)
            }
        };
        write!(
            f,
            "{} {}: {} = {};",
            keyword, self.name, self.ty, initializer
        )
    }
}

impl fmt::Display for TopLevelStatement {
    fn fmt(&self, f: &mut fmt::Formatter<'_>) -> fmt::Result {
        match self {
            TopLevelStatement::GlobalDecl(decl) => write!(f, "{}", decl),
            TopLevelStatement::StructDecl(s) => write!(f, "{}", s),
        }
    }
}

impl fmt::Display for Program {
    fn fmt(&self, f: &mut fmt::Formatter<'_>) -> fmt::Result {
        for stmt in self.statements.iter() {
            writeln!(f, "{}\n", stmt)?;
        }
        Ok(())
    }
}

#[cfg(test)]
mod tests {
    use super::*;

    fn parse_one(source: &str) -> Result<TopLevelStatement, ParseError> {
        let source_rc: Rc<[u8]> = source.as_bytes().into();
        let mut parser = Parser::new(source_rc)?;
        let program = parser.parse()?;

        assert_eq!(
            program.statements.len(),
            1,
            "expected exactly one top-level statement"
        );
        Ok(program.statements[0].clone())
    }

    #[test]
    fn test_simple_struct() {
        let source = "struct Point { x: i32, y: i32, }";
        let stmt = parse_one(source).unwrap();

        match stmt {
            TopLevelStatement::StructDecl(s) => {
                assert_eq!(s.name.as_bytes(), b"Point");
                assert_eq!(s.fields.len(), 2);
                assert_eq!(s.fields[0].name.as_bytes(), b"x");
                assert_eq!(s.fields[1].name.as_bytes(), b"y");
            }
            _ => panic!("expected struct declaration"),
        }
    }

    #[test]
    fn test_empty_struct_error() {
        let source = "struct Empty { }";
        let result = parse_one(source);

        match result {
            Err(ParseError::EmptyStruct { name }) => {
                assert_eq!(name.as_ref(), b"Empty");
            }
            _ => panic!("expected empty struct error"),
        }
    }

    #[test]
    fn test_var_decl_with_init() {
        let source = "var x: u32 = 42;";
        let stmt = parse_one(source).unwrap();

        match stmt {
            TopLevelStatement::GlobalDecl(decl) => {
                assert!(!decl.is_const);
                assert_eq!(decl.name.as_bytes(), b"x");
                assert!(matches!(decl.ty, Type::PrimitiveType(PrimitiveType::U32)));
                assert!(matches!(
                    decl.initializer,
                    VariableInitializer::Initializer(..)
                ));
            }
            _ => panic!("expected variable declaration"),
        }
    }

    #[test]
    fn test_multiple_top_level_statements() {
        let source = r#"
            struct Point { x: i32, y: i32, }
            var origin: Point* = undefined;
            const MAX: u32 = 100;
        "#;

        let source_rc: Rc<[u8]> = source.as_bytes().into();
        let mut parser = Parser::new(source_rc).unwrap();
        let program = parser.parse().unwrap();

        assert_eq!(program.statements.len(), 3);

        // Check first is struct
        assert!(matches!(
            program.statements[0],
            TopLevelStatement::StructDecl(_)
        ));

        // Check second and third are globals
        assert!(matches!(
            program.statements[1],
            TopLevelStatement::GlobalDecl(_)
        ));
        assert!(matches!(
            program.statements[2],
            TopLevelStatement::GlobalDecl(_)
        ));
    }

    // S-expression formatting tests for when Pratt parser is implemented
    #[test]
    fn test_expr_display_atoms() {
        let num = Expr::Number(42);
        assert_eq!(format!("{}", num), "42");

        let id = Expr::Identifier(Rc::from(&b"foo"[..]));
        assert_eq!(format!("{}", id), "foo");

        let str_lit = Expr::StringLiteral(Rc::from(&b"hello"[..]));
        assert_eq!(format!("{}", str_lit), "\"hello\"");

        let ch = Expr::CharLiteral(b'x');
        assert_eq!(format!("{}", ch), "'x'");
    }

    #[test]
    fn test_expr_display_binary() {
        // 3 + 4 -> (+ 3 4)
        let add = Expr::Binary {
            op: BinaryOp::Add,
            left: Box::new(Expr::Number(3)),
            right: Box::new(Expr::Number(4)),
        };
        assert_eq!(format!("{}", add), "(+ 3 4)");

        // x * y -> (* x y)
        let mul = Expr::Binary {
            op: BinaryOp::Mul,
            left: Box::new(Expr::Identifier(Rc::from(&b"x"[..]))),
            right: Box::new(Expr::Identifier(Rc::from(&b"y"[..]))),
        };
        assert_eq!(format!("{}", mul), "(* x y)");
    }

    #[test]
    fn test_expr_display_unary() {
        // -x -> (- x)
        let neg = Expr::Unary {
            op: UnaryOp::Negate,
            operand: Box::new(Expr::Identifier(Rc::from(&b"x"[..]))),
        };
        assert_eq!(format!("{}", neg), "(- x)");

        // !flag -> (! flag)
        let not = Expr::Unary {
            op: UnaryOp::LogicalNot,
            operand: Box::new(Expr::Identifier(Rc::from(&b"flag"[..]))),
        };
        assert_eq!(format!("{}", not), "(! flag)");
    }

    #[test]
    fn test_expr_display_nested() {
        // 3 + 4 * 5 -> (+ 3 (* 4 5))
        let expr = Expr::Binary {
            op: BinaryOp::Add,
            left: Box::new(Expr::Number(3)),
            right: Box::new(Expr::Binary {
                op: BinaryOp::Mul,
                left: Box::new(Expr::Number(4)),
                right: Box::new(Expr::Number(5)),
            }),
        };
        assert_eq!(format!("{}", expr), "(+ 3 (* 4 5))");

        // -x + y -> (+ (- x) y)
        let expr2 = Expr::Binary {
            op: BinaryOp::Add,
            left: Box::new(Expr::Unary {
                op: UnaryOp::Negate,
                operand: Box::new(Expr::Identifier(Rc::from(&b"x"[..]))),
            }),
            right: Box::new(Expr::Identifier(Rc::from(&b"y"[..]))),
        };
        assert_eq!(format!("{}", expr2), "(+ (- x) y)");
    }
